Corrected an error with Tremaux tree processing prior of sorting: Better fitting of consensus edges into the tree.

--- a/01_graph.ipynb
+++ b/01_graph.ipynb
@@ -299,7 +299,7 @@
     "        addedPaths = 0\n",
     "        ignoredPaths = 0\n",
     "        for pathID,pathString in enumerate(pathStringsList):\n",
-    "            print(f'\\rLoading link {pathID+1:0{numPathDigits}}/{numPaths:0{numPathDigits}}',end='')\n",
+    "            print(f'\\rLoading path {pathID+1:0{numPathDigits}}/{numPaths:0{numPathDigits}}',end='')\n",
     "            pathArray = pathString.rstrip().split(sep='\\t')\n",
     "            seqID,path = pathArray[1:3]\n",
     "            useAccession = True\n",
