--- a/02_tree.ipynb
+++ b/02_tree.ipynb
@@ -175,33 +175,131 @@
     "#             print(f'Node: {node}')\n",
     "#             print(f'Graph edges: {graphInEdgeList}')\n",
     "#             print(f'Tree edges: {treeInEdgeList}')\n",
+    "            # Remove self-cycle paths larger cycles will be removed later.\n",
+    "            graphInEdgeList = [edge for edge in graphInEdgeList if edge[0]!=edge[1]] # removed '(not nx.has_path(treeCombined,edge[1],edge[0]) or edge[::-1] in treeCombined.edges) and '\n",
+    "#               \n",
     "            if len(graphInEdgeList)>0:# and len(treeInEdgeList)>0:\n",
-    "                # Remove self-cycle paths larger cycles will be removed later.\n",
-    "                graphInEdgeList = [edge for edge in graphInEdgeList if edge[0]!=edge[1]] # removed 'not nx.has_path(treeCombined,edge[1],edge[0]) and '\n",
-    "#                 print(graphInEdgeList)\n",
     "                # Get number of paths passing each edge\n",
     "                edgePaths = [self.parentGraph.edgePaths.get(edge,0) for edge in graphInEdgeList]\n",
     "                # Find the edge with maximum number of paths passing\n",
-    "                edgeToKeep = graphInEdgeList[np.argmax(edgePaths)]\n",
+    "                edgeToKeepInd = np.argmax(edgePaths)\n",
+    "                edgeToKeep = graphInEdgeList[edgeToKeepInd]\n",
+    "                edgeToKeepValue = edgePaths[edgeToKeepInd]\n",
     "#                 print(f'Edge to keep: {edgeToKeep}')\n",
     "                # If the best edge not in the tree already\n",
     "                if edgeToKeep not in treeInEdgeList:\n",
-    "#                     print('Edge substituted!')\n",
-    "                    # Remove current incoming edge in the tree\n",
-    "                    treeCombined.remove_edges_from(treeInEdgeList)\n",
-    "                    # and replace it with newly identified best edge\n",
-    "                    treeCombined.add_edge(*edgeToKeep)\n",
-    "                    try:\n",
-    "                        # See if there was any cycle paths created\n",
+    "                    if nx.has_path(treeCombined,edgeToKeep[1],edgeToKeep[0]):\n",
+    "                        print(f'Node: {node}')\n",
+    "                        print(f'Graph edges: {graphInEdgeList}')\n",
+    "                        print(f'Tree edges: {treeInEdgeList}')\n",
+    "                        print(f'Edge to keep: {edgeToKeep}')\n",
+    "                        \n",
+    "                        print('Cycle found!')\n",
+    "                        # Get all posible cycle path:\n",
+    "                        edgesToRemove = []\n",
+    "                        edgesToAdd = []\n",
+    "                        breakSubstitute = False\n",
+    "\n",
     "                        for path in nx.all_shortest_paths(treeCombined,edgeToKeep[1],edgeToKeep[0]):\n",
-    "#                             print(f'Path {path} severed!')\n",
-    "                            # For each cycle, severe the link outgoing from current node.\n",
-    "                            treeCombined.remove_edge(path[0],path[1])\n",
-    "                    except NetworkXNoPath:\n",
-    "                        # If no cycle path found, just carry on.\n",
-    "                        pass\n",
-    "#             print('#######')\n",
-    "                    \n",
+    "                            print(f'Path to break: {path}')\n",
+    "                            pathBreakpoint = self._severePathPoint(treeCombined,path,edgeToKeepValue)\n",
+    "                            if pathBreakpoint is not None:\n",
+    "                                edgesToRemove.append(pathBreakpoint[0])\n",
+    "                                edgesToAdd.append(pathBreakpoint[1])\n",
+    "                            else:\n",
+    "                                print('Unbreakable path!')\n",
+    "                                breakSubstitute = True\n",
+    "                                break\n",
+    "                        \n",
+    "                        if not breakSubstitute:\n",
+    "                            print('Edge substituted!')\n",
+    "                            self._substituteEdges(treeCombined,[edgeToKeep],treeInEdgeList)\n",
+    "                            for edgeToRemove,edgeToAdd in zip(edgesToRemove,edgesToAdd):\n",
+    "                                print(f'Edge {edgeToAdd} substitute edge {edgeToRemove}')\n",
+    "                                self._substituteEdges(treeCombined,[edgeToAdd],[edgeToRemove])\n",
+    "                    else:\n",
+    "                        self._substituteEdges(treeCombined,[edgeToKeep],treeInEdgeList)\n",
+    "    \n",
+    "    def _severePathPoint(self,G,path,newEdgeValue):\n",
+    "        '''\n",
+    "            Heuristics for finding the best position in the path to severe (and substitute).\n",
+    "            It will find the lowest value possible edge in the path and find the highest possible value of alternative.\n",
+    "            \n",
+    "            If there is no alternative, it will return None\n",
+    "        '''\n",
+    "        # get number of paths passing (value) each edge in the path\n",
+    "        pathValues = [self.parentGraph.edgePaths[(path[i-1],path[i])] for i in range(1,len(path))]\n",
+    "        # sort the values of the path\n",
+    "        pathValIndSort = np.argsort(pathValues)\n",
+    "        \n",
+    "        res = None\n",
+    "        \n",
+    "        # For each edge in path starting from the least valuable, we check the most valuable substitution and check that it is still does not \n",
+    "        edgeToSubstitute = None\n",
+    "        edgeToSubValue = None\n",
+    "        for pathPos in pathValIndSort:\n",
+    "            # Start and end of current edge in the path\n",
+    "            curStart = path[pathPos]\n",
+    "            curEnd = path[pathPos+1]\n",
+    "            \n",
+    "            # Combine tuple of current edge\n",
+    "            curEdge = (curStart,curEnd)\n",
+    "            # Calculate value of current edge in the path\n",
+    "            curEdgeValue = pathValues[pathPos]\n",
+    "            \n",
+    "            # If it is higher than new substitution, then disregard it, severing it will make our consensus tree worse.\n",
+    "#             if curEdgeValue>newEdgeValue:\n",
+    "#                 continue\n",
+    "            \n",
+    "            # Get all incoming edges to the end of the current edge (alternative edges)\n",
+    "            allIncomingEdges = list(self.originalGraph.in_edges(curEnd))\n",
+    "            \n",
+    "            # If there is only one incoming edge, do not substitute it.\n",
+    "            if len(allIncomingEdges)<2:\n",
+    "                continue\n",
+    "            \n",
+    "            # Calc values of all incoming edges to the end of edge\n",
+    "            incomingEdgesValue = [self.parentGraph.edgePaths[edge] for edge in allIncomingEdges]\n",
+    "            # Get the sorting order (decreasing) of incoming edges\n",
+    "            edgeSortInd = np.flip(np.argsort(incomingEdgesValue))\n",
+    "            \n",
+    "            \n",
+    "            for edgeInd in edgeSortInd:\n",
+    "                altEdge = allIncomingEdges[edgeInd]\n",
+    "                altEdgeValue = incomingEdgesValue[edgeInd]\n",
+    "                # We consider only substitutions\n",
+    "                if altEdge == curEdge:\n",
+    "#                     if curEdgeValue>newEdgeValue:\n",
+    "#                         break\n",
+    "#                     else:\n",
+    "                    continue\n",
+    "                \n",
+    "#                 if altEdge[0] == 6861:\n",
+    "#                     pdb.set_trace()\n",
+    "        \n",
+    "                G.remove_edge(*curEdge)\n",
+    "            # Add alt edge temporarily!\n",
+    "                # if the alternative still manifest loop, disregard this option\n",
+    "                if (nx.has_path(G,path[0],altEdge[0]) and nx.has_path(G,altEdge[-1],path[-1])) or nx.has_path(G,*altEdge[::-1]):\n",
+    "                    G.add_edge(*curEdge)\n",
+    "                    continue\n",
+    "                \n",
+    "                edgeToSubstitute = altEdge\n",
+    "                edgeToSubValue = altEdgeValue\n",
+    "                break\n",
+    "            \n",
+    "            if edgeToSubstitute is not None:\n",
+    "                res = [curEdge,edgeToSubstitute,edgeToSubValue]\n",
+    "                break\n",
+    "        \n",
+    "        return res\n",
+    "    \n",
+    "    def _substituteEdges(self,G,edgesToAddList,edgesToRemoveList):\n",
+    "        # Remove current incoming edge in the tree\n",
+    "        G.remove_edges_from(edgesToRemoveList)\n",
+    "        # and replace it with newly identified best edge\n",
+    "        G.add_edges_from(edgesToAddList)\n",
+    "    \n",
     "    def _getMissingEdges(self):\n",
     "        graphEdges = set(list(self.originalGraph.edges))\n",
     "        treeEdges = set(list(self.edges))\n",
