--- a/05_export.ipynb
+++ b/05_export.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "preliminary-personal",
+   "id": "essential-bolivia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "inside-configuration",
+   "id": "worth-norwegian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "narrative-bloom",
+   "id": "color-assist",
    "metadata": {},
    "source": [
     "# Graph module\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "julian-separate",
+   "id": "resistant-failing",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suited-domain",
+   "id": "lasting-bahrain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "precise-sailing",
+   "id": "arbitrary-preparation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tight-burns",
+   "id": "viral-crime",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "successful-fellowship",
+   "id": "closing-herald",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
     "            if debug:    \n",
     "                print(f'Processing node {compNum+1:0{numCompsDigits}}/{numComps:0{numCompsDigits}}')\n",
     "            else:\n",
-    "                print(f'\\rProcessing node {nodeIdx:0{numCompsDigits}}/{numComps:0{numCompsDigits}}',end='')\n",
+    "                print(f'\\rProcessing node {compNum+1:0{numCompsDigits}}/{numComps:0{numCompsDigits}}',end='')\n",
     "                \n",
     "            component = components[compNum]\n",
     "\n",
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "patent-cisco",
+   "id": "introductory-thread",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sonic-saturn",
+   "id": "partial-three",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "subjective-kernel",
+   "id": "eastern-communications",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "equivalent-retention",
+   "id": "welsh-residence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "difficult-voice",
+   "id": "protecting-punch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "protected-specification",
+   "id": "living-discrimination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "talented-plane",
+   "id": "accepted-nutrition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "induced-engine",
+   "id": "cooked-fluid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "revolutionary-selection",
+   "id": "commercial-happiness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "veterinary-outreach",
+   "id": "retained-behalf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reliable-trainer",
+   "id": "elder-marble",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "oriental-patch",
+   "id": "adequate-moore",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "current-captain",
+   "id": "understood-sharing",
    "metadata": {},
    "outputs": [],
    "source": [
