Added information about which side is the other side of each link for export to Pantograph JSON; It helps to deal with tricky arrows.

--- a/02_tree.ipynb
+++ b/02_tree.ipynb
@@ -154,6 +154,7 @@
     "            \n",
     "            if byPath:\n",
     "                self._preprocessPathTree(treeCombined)\n",
+    "                self._preprocessPathTree(treeCombined)\n",
     "            else:\n",
     "                for toNode,numDeg in treeCombined.in_degree:\n",
     "                    if numDeg>1:\n",
@@ -167,7 +168,8 @@
     "    def _preprocessPathTree(self,treeCombined):\n",
     "#         pdb.set_trace()\n",
     "        for node in self.originalGraph.nodes:\n",
-    "            \n",
+    "#             if node==29:\n",
+    "#                 pdb.set_trace()\n",
     "            # get all edges coming to given node in the full graph\n",
     "            graphInEdgeList = list(self.originalGraph.in_edges(node))\n",
     "            # get all edges coming to a given node in the tremaux tree\n",
@@ -227,6 +229,10 @@
     "            \n",
     "            If there is no alternative, it will return None\n",
     "        '''\n",
+    "\n",
+    "#         if path[0]==29 and path[-1]==124:\n",
+    "#             pdb.set_trace()\n",
+    "            \n",
     "        # get number of paths passing (value) each edge in the path\n",
     "        pathValues = [self.parentGraph.edgePaths[(path[i-1],path[i])] for i in range(1,len(path))]\n",
     "        # sort the values of the path\n",
