--- a/05_export.ipynb
+++ b/05_export.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "essential-bolivia",
+   "id": "civilian-accuracy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "worth-norwegian",
+   "id": "united-review",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "color-assist",
+   "id": "authentic-alfred",
    "metadata": {},
    "source": [
     "# Graph module\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "resistant-failing",
+   "id": "attached-sweet",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lasting-bahrain",
+   "id": "protecting-repeat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "arbitrary-preparation",
+   "id": "mediterranean-jersey",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "viral-crime",
+   "id": "improved-chart",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "closing-herald",
+   "id": "august-julian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,9 +641,9 @@
     "        \n",
     "        for compNum in range(numComps):\n",
     "            if debug:    \n",
-    "                print(f'Processing node {compNum+1:0{numCompsDigits}}/{numComps:0{numCompsDigits}}')\n",
+    "                print(f'Processing component {compNum+1:0{numCompsDigits}}/{numComps:0{numCompsDigits}}')\n",
     "            else:\n",
-    "                print(f'\\rProcessing node {compNum+1:0{numCompsDigits}}/{numComps:0{numCompsDigits}}',end='')\n",
+    "                print(f'\\rProcessing component {compNum+1:0{numCompsDigits}}/{numComps:0{numCompsDigits}}',end='')\n",
     "                \n",
     "            component = components[compNum]\n",
     "\n",
@@ -662,7 +662,7 @@
     "                elif componentToNode[compNum-1][-1]!=mainNode:\n",
     "                    doLeft = True\n",
     "\n",
-    "                doRight = False\n",
+    "                doRight = False # Check this conditions as they may be causing issue!\n",
     "                if compNum==(len(components)-1):\n",
     "                    doRight = True\n",
     "                elif componentToNode[compNum+1][0]!=mainNode:\n",
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "introductory-thread",
+   "id": "romance-russell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "partial-three",
+   "id": "smaller-hamburg",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eastern-communications",
+   "id": "theoretical-ecuador",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "welsh-residence",
+   "id": "brilliant-armstrong",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "protecting-punch",
+   "id": "magnetic-missile",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "living-discrimination",
+   "id": "polished-marshall",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accepted-nutrition",
+   "id": "affected-advice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cooked-fluid",
+   "id": "nuclear-attitude",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "commercial-happiness",
+   "id": "following-front",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "retained-behalf",
+   "id": "suspected-olympus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,43 +1121,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "elder-marble",
+   "id": "considered-killing",
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
     "def addLinksToComp(nodeInComp,nodeToComponent,toLinks,fromLinks,component,components,doLeft=True,doRight=True):\n",
     "    compLinks = fillLinks(nodeInComp,nodeToComponent,toLinks,fromLinks,component,components,doLeft,doRight)\n",
-    "    \n",
+    "    if component['last_bin']==121:\n",
+    "        pdb.set_trace()\n",
     "    if \"lArrivals\" in compLinks:\n",
-    "        for (upstream,downstream),participants in compLinks[\"lArrivals\"].items():\n",
+    "        for (upstream,downstream,otherSide),participants in compLinks[\"lArrivals\"].items():\n",
+    "            if otherSide=='fr':\n",
+    "                fromRight = True\n",
+    "            else:\n",
+    "                fromRight = False\n",
     "            component['larrivals'].append({\n",
     "                    'upstream': upstream,\n",
     "                    'downstream': downstream,\n",
+    "                    'otherSideRight': fromRight,\n",
     "                    'participants': participants\n",
     "                })\n",
     "    \n",
     "    if 'rArrivals' in compLinks:\n",
-    "        for (upstream,downstream),participants in compLinks[\"rArrivals\"].items():\n",
+    "        for (upstream,downstream,otherSide),participants in compLinks[\"rArrivals\"].items():\n",
+    "            if otherSide == 'fr':\n",
+    "                fromRight = True\n",
+    "            else:\n",
+    "                fromRight = False\n",
     "            component['rarrivals'].append({\n",
     "                    'upstream': upstream,\n",
     "                    'downstream': downstream,\n",
+    "                    'otherSideRight': fromRight,\n",
     "                    'participants': participants\n",
     "                })\n",
     "            \n",
     "    if 'rDepartures' in compLinks:\n",
-    "        for (upstream,downstream),participants in compLinks[\"rDepartures\"].items():\n",
+    "        for (upstream,downstream,otherSide),participants in compLinks[\"rDepartures\"].items():\n",
+    "            if otherSide == 'tl':\n",
+    "                toRight = False\n",
+    "            else:\n",
+    "                toRight = True\n",
     "            component['rdepartures'].append({\n",
     "                'upstream': upstream,\n",
     "                'downstream': downstream,\n",
+    "                'otherSideRight': toRight,\n",
     "                'participants': participants\n",
     "            })\n",
     "    \n",
     "    if 'lDepartures' in compLinks:\n",
-    "        for (upstream,downstream),participants in compLinks[\"lDepartures\"].items():\n",
+    "        for (upstream,downstream,otherSide),participants in compLinks[\"lDepartures\"].items():\n",
+    "            if otherSide == 'tl':\n",
+    "                toRight = False\n",
+    "            else:\n",
+    "                toRight = True\n",
     "            component['ldepartures'].append({\n",
     "                'upstream': upstream,\n",
     "                'downstream': downstream,\n",
+    "                'otherSideRight': toRight,\n",
     "                'participants': participants\n",
     "            })\n",
     "        \n",
@@ -1167,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adequate-moore",
+   "id": "opened-anthony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "understood-sharing",
+   "id": "authentic-associate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,11 +1227,13 @@
     "def fillLinks(nodeInComp,nodeToComponent,toLinks,fromLinks,component,components,doLeft=True,doRight=True):\n",
     "    compLinks = {}\n",
     "    \n",
+    "    \n",
+    "    \n",
     "#     if component['first_bin']==2 and len(nodeInComp)==2:\n",
     "#         pdb.set_trace()\n",
     "    \n",
     "    for node in nodeInComp:\n",
-    "    \n",
+    "        \n",
     "        # Processing all external arrival links\n",
     "        nodeToLink = toLinks.get(node,{})\n",
     "        for fromNode in nodeToLink.keys():\n",
@@ -1228,10 +1251,10 @@
     "                complArrivals = compLinks.setdefault('lArrivals',{})\n",
     "                # from right departure\n",
     "                if len(frd)>0 and (fromNode not in nodeInComp) and (fromLastComp['last_bin']+1!=component['first_bin']):\n",
-    "                    complArrivals.setdefault((fromLastComp['last_bin'],component['first_bin']),set()).update(frd)\n",
+    "                    complArrivals.setdefault((fromLastComp['last_bin'],component['first_bin'],'fr'),set()).update(frd)\n",
     "                #from left departure\n",
     "                if len(fld)>0 and (fromNode not in nodeInComp):\n",
-    "                    complArrivals.setdefault((fromFirstComp['first_bin'],component['first_bin']),set()).update(fld)\n",
+    "                    complArrivals.setdefault((fromFirstComp['first_bin'],component['first_bin'],'fl'),set()).update(fld)\n",
     "            \n",
     "            #right arrivals\n",
     "            if len(ra)>0 and doRight:\n",
@@ -1240,12 +1263,13 @@
     "                comprArrivals = compLinks.setdefault('rArrivals',{})\n",
     "                #from right departures\n",
     "                if len(frd)>0 and (fromNode not in nodeInComp):\n",
-    "                    comprArrivals.setdefault((fromLastComp['last_bin'],component['last_bin']),set()).update(frd)\n",
+    "                    comprArrivals.setdefault((fromLastComp['last_bin'],component['last_bin'],'fr'),set()).update(frd)\n",
     "                #from left departures\n",
     "                if len(fld)>0 and (fromNode not in nodeInComp):\n",
-    "                    comprArrivals.setdefault((fromFirstComp['first_bin'],component['last_bin']),set()).update(fld)\n",
+    "                    comprArrivals.setdefault((fromFirstComp['first_bin'],component['last_bin'],'fl'),set()).update(fld)\n",
     "            \n",
-    "\n",
+    "        if component['last_bin'] == 121 and node == 121:\n",
+    "            pdb.set_trace()\n",
     "        # Processing all external departure links\n",
     "        nodeFromLink = fromLinks.get(node,{})\n",
     "        for toNode in nodeFromLink.keys():\n",
@@ -1257,14 +1281,14 @@
     "            toLastComp = components[nodeToComponent[toNode-1][-1]]\n",
     "            \n",
     "            #right departures\n",
-    "            if len(rd)>0 and doRight:\n",
+    "            if len(rd)>0 and doRight: # Check if doRight is set incorrectly for our case (121->122 at level 4)\n",
     "                tla,tra = splitforwardInversedNodeComp(rd,toFirstComp,intermediateCondition)\n",
     "                \n",
     "                comprDepartures = compLinks.setdefault('rDepartures',{})\n",
     "                #to left arrivals\n",
     "                if len(tla)>0:\n",
     "                    if toNode not in nodeInComp:\n",
-    "                         comprDepartures.setdefault((component['last_bin'],toFirstComp['first_bin']),set()).update(tla)\n",
+    "                         comprDepartures.setdefault((component['last_bin'],toFirstComp['first_bin'],'tl'),set()).update(tla)\n",
     "                    elif node==nodeInComp[-1] and toNode==nodeInComp[0]:\n",
     "                        # Check that repeated element is actually contiguous inside otherwise it is not a loop and should not be visible.\n",
     "                        tla_update = list(set(tla).intersection(*[set(fromLinks.get(nodeInComp[i],{}).get(nodeInComp[i+1],[])) for i in range(len(nodeInComp)-1)]))\n",
@@ -1273,13 +1297,13 @@
     "                            #Loop link, can only happen when with left arrival and right departure (or vice versa).\n",
     "                            complArrivals = compLinks.setdefault('lArrivals',{})\n",
     "\n",
-    "                            complArrivals.setdefault((component['last_bin'],component['first_bin']),set()).update(tla)\n",
-    "                            comprDepartures.setdefault((component['last_bin'],component['first_bin']),set()).update(tla)\n",
+    "                            complArrivals.setdefault((component['last_bin'],component['first_bin'],'fr'),set()).update(tla)\n",
+    "                            comprDepartures.setdefault((component['last_bin'],component['first_bin'],'tl'),set()).update(tla)\n",
     "                \n",
     "                #to right arrivals\n",
-    "                if len(tra)>0:\n",
+    "                if len(tra)>0: # Most probably the problem is here! Check it!\n",
     "                    if toNode not in nodeInComp:\n",
-    "                        comprDepartures.setdefault((component['last_bin'],toLastComp['last_bin']),set()).update(tra)\n",
+    "                        comprDepartures.setdefault((component['last_bin'],toLastComp['last_bin'],'tr'),set()).update(tra)\n",
     "            \n",
     "            #left departures\n",
     "            if len(ld)>0 and doLeft:\n",
@@ -1289,12 +1313,12 @@
     "                #to left arrivals\n",
     "                if len(tla)>0:\n",
     "                    if toNode not in nodeInComp:\n",
-    "                        complDepartures.setdefault((component['first_bin'],toFirstComp['first_bin']),set()).update(tla)\n",
+    "                        complDepartures.setdefault((component['first_bin'],toFirstComp['first_bin'],'tl'),set()).update(tla)\n",
     "                \n",
     "                if len(tra)>0:\n",
     "                    if toNode not in nodeInComp:\n",
     "                        if component['first_bin']-1!=toFirstComp['last_bin']:\n",
-    "                            complDepartures.setdefault((component['first_bin'],toLastComp['last_bin']),set()).update(tra)\n",
+    "                            complDepartures.setdefault((component['first_bin'],toLastComp['last_bin'],'tr'),set()).update(tra)\n",
     "                    elif node==nodeInComp[0] and toNode==nodeInComp[-1]:\n",
     "                        # Check that repeated element is actually contiguous inside otherwise it is not a loop and should not be visible.\n",
     "                        tla_update = list(set(tra).intersection(*[set(fromLinks.get(nodeInComp[i],{}).get(nodeInComp[i-1],[])) for i in range(len(nodeInComp)-1,0,-1)]))\n",
@@ -1303,8 +1327,8 @@
     "                            #Loop link, can only happen when with right arrival and left departure (or vice versa).\n",
     "                            comprArrivals = compLinks.setdefault('rArrivals',{})\n",
     "\n",
-    "                            comprArrivals.setdefault((component['first_bin'],component['last_bin']),set()).update(tra)\n",
-    "                            complDepartures.setdefault((component['first_bin'],component['last_bin']),set()).update(tra)\n",
+    "                            comprArrivals.setdefault((component['first_bin'],component['last_bin'],'fl'),set()).update(tra)\n",
+    "                            complDepartures.setdefault((component['first_bin'],component['last_bin'],'tr'),set()).update(tra)\n",
     "                        \n",
     "    return compLinks"
    ]
